--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -16,50 +16,73 @@ priority: "0.9"
 aside.hide-for-large.pad--sm.container-color--blue-alt
   .row.align-middle.align-center
     .columns.small-6.medium-4
-      a.button.hollow-inverted.expanded.small.nomargin href="/platform/success" title=("Hear from our customers") 
+      a.button.hollow-inverted.expanded.small.nomargin href="/platform/success" title=("Hear from our customers")
         | Customer Success
         i.fa.fa-angle-right
     .columns.small-6.medium-4
-      a.button.button--light.expanded.small.nomargin href="/pricing" title=("sign up") 
+      a.button.button--light.expanded.small.nomargin href="/pricing" title=("sign up")
         | Pricing
         i.fa.fa-icon.fa-angle-right
 
-.container-color--gray-light
-  section.section-article
-    .row.align-center.group
-      .columns.small-12.medium-12.large-8
-        h1.headline-2.group.text-center= current_page.data.summary
-        .video.drop
-          script async="" src="//fast.wistia.com/embed/medias/1o1udvaa6z.jsonp" 
-          script async="" src="//fast.wistia.com/assets/external/E-v1.js" 
-          .wistia_responsive_padding style=("padding:56.25% 0 0 0;position:relative;") 
-            .wistia_responsive_wrapper style="height:100%;left:0;position:absolute;top:0;width:100%;" 
-              span.wistia_embed.wistia_async_1o1udvaa6z class=("popover=true popoverAnimateThumbnail=true videoFoam=true") style="display:inline-block;height:100%;width:100%"   
-    .row.group
-      - data.views.platform.compliance_header.each do | block |
-        .columns.small-12.medium-4
-          h3.headline-4= block.title
-          p= block.desc
-    .row.align-center
-      .columns.small-6.large-5.text-right
-        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow" }
-      .columns.small-6.large-6.text-left
-        = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/platform/success", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
+section.container-color--dark-alt style=("background-color: #23272C")
+  .container-image--center(data-interchange="[/public/icons/inlined/art/compliance-bg.svg, small]")
+    section.section-article
+      .row.align-center.group
+        .columns.small-12.medium-12.large-8
+          h1.headline-2.group.text-center= current_page.data.summary
+          .video.drop--big
+            script async="" src="//fast.wistia.com/embed/medias/1o1udvaa6z.jsonp"
+            script async="" src="//fast.wistia.com/assets/external/E-v1.js"
+            .wistia_responsive_padding style=("padding:56.25% 0 0 0;position:relative;")
+              .wistia_responsive_wrapper style="height:100%;left:0;position:absolute;top:0;width:100%;"
+                span.wistia_embed.wistia_async_1o1udvaa6z class=("popover=true popoverAnimateThumbnail=true videoFoam=true") style="display:inline-block;height:100%;width:100%"   
+      .row.group
+        - data.views.platform.compliance_header.each do | block |
+          .columns.small-12.medium-4
+            h3.headline-4= block.title
+            p= block.desc
+      .row.align-center
+        .columns.small-6.large-5.text-right
+          = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
+        .columns.small-6.large-6.text-left
+          = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/platform/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" }
 
 
 section.section-article.container-color--dark-alt
   .row.group.align-center
     .columns.small-12
-      h2.headline-3.group.text-center.spaced-out Understanding Shared Responsibility
-      script async="" src="https://fast.wistia.com/embed/medias/08ebxufc4q.jsonp" 
-      script async="" src="https://fast.wistia.com/assets/external/E-v1.js" 
-      .wistia_responsive_padding style=("padding:56.25% 0 0 0;position:relative;") 
-        .wistia_responsive_wrapper style="height:100%;left:0;position:absolute;top:0;width:100%;" 
-          .wistia_embed.wistia_async_08ebxufc4q class=("seo=false videoFoam=true") style="height:100%;width:100%"   
+      h2.headline-3.group.text-center.spaced-out Understanding Shared Responsibility   
   .row.align-center
-    - data.views.platform.shared_responsibility.each do | block |
-      .columns.small-12.medium-4
-        = Kramdown::Document.new(block).to_html
+    .columns.small-12.medium-5
+      .callout.callout--dark-alpha
+        markdown:
+          <strong>Required Compliance Controls</strong>
+
+          - Block-level encryption
+          - Network encryption between existing processes or services
+          - Sub-network segmentation
+          - Intrusion detection
+          - Vulnerability scanning
+          - Systems monitoring
+          - System-level logging
+          - App-level logging
+          - Log storage in an encrypted fashion
+          - Disaster recovery protocols
+          - Business continuity
+          - Patch management
+          - Breach management
+          - Daily backups
+          - Penetration testing
+          - Business Associate management
+          - Access control management
+    .columns.small-12.medium-7
+      .callout.callout--dark-alpha
+        p <strong>Compliance is not magic, it's just a lot of work</strong>
+        p None of it is impossible for you to figure out. But configuring, integrating, documenting, auditing, and managing it across a fleet of containers or VMs with every deployment is how continuous compliance happens.
+        p Datica does all this for you. We are compliance _on_ the cloud. Customers of Datica pass these Shared Responsibility obligations to us and are left with compliance _in_ the cloud, which are company-level and application-level responsibilities.
+      .callout.callout--dark-alpha
+        p AWS and Azure are the world's best clouds at addressing compliance and security _of_ the cloud: physical controls and network controls. The rest is your responsibility.
+        p In their Shared Responsibility models, you must address the following on top of them in order to approach complete continuous compliance. The following list maps to a specific control in the HIPAA Omnibus, HITRUST CSF, GxP regulations, or GDPR articles.
 
 
 section.section-article.container-gray-12
@@ -82,9 +105,9 @@ section.section-article
     .columns.small-12.medium-6.large-6
       markdown:
         The European Union has created a new authoritative regulation on consumer data called GDPR. Fines start being handed out on May 25th, 2018. The regulation applies to all EU citizens regardless of service or where the data lives. Protected Health Information (PHI) is scoped within GDPR, so any healthcare organization who might service European Union citizens will be affected by it.
-        
+
         Are you ready? Datica has gone through the necessary audits to ensure it is compliant with the regulation.
-        
+
         [Learn more about GDPR](/discover/#{data.site.discover['6yNMzCKn84Q4qIsm0sWmUy'].slug}).
 
   .row.group.align-center
@@ -95,14 +118,14 @@ section.section-article
     .columns.small-12.medium-6.large-6
       markdown:
         The European Union has created a new authoritative regulation on consumer data called GDPR. Fines start being handed out on May 25th, 2018. The regulation applies to all EU citizens regardless of service or where the data lives. Protected Health Information (PHI) is scoped within GDPR, so any healthcare organization who might service European Union citizens will be affected by it.
-        
+
         Are you ready? Datica has gone through the necessary audits to ensure it is compliant with the regulation.
-        
+
         [Learn more about GxP](/academy/gxp-and-business-associates-does-it-exist-like-hipaa).
     .columns.small-12.medium-6.large-4
       img.group alt=("GxP Ready") src="https://images.contentful.com/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png" /
 
-aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]" 
+aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]"
   .row.align-center
     .columns.small-12.medium-10.large-10.text-center
       h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
@@ -111,6 +134,3 @@ aside.section-article.container-color--blue-bright-noise.container-image--center
       = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
     .columns.small-6.large-6.text-left
       = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/platform/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
-
-
-
