--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -25,12 +25,12 @@ priority: "1.0"
           .card.container-color--light-shimmer
             .card-section.text-center
               h3.headline-5 Schedule a demo to learn more.
-              = partial "partials/snippets/button", :locals => { :label => "Request a demo", :url => "/contact", :button_classes => "button expanded spaced-out", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
+              = partial "partials/snippets/button", :locals => { :label => "Request a demo", :url => "/demo", :button_classes => "button expanded spaced-out", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
             .card-section.card-section--flush
               h4.headline-4 Questions?
               p
                 | Talk with a customer representative.
-                = partial "partials/snippets/button", :locals => { :label => "", :url => "/contact", :button_classes => "label round", :icon => "icon-comment", :icon_color => "white" }
+                = partial "partials/snippets/button", :locals => { :label => "", :url => "/demo", :button_classes => "label round", :icon => "icon-comment", :icon_color => "white" }
 .strip-bright
 = partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
 section.section-article
