--- a/source/pricing/new.html.slim
+++ b/source/pricing/new.html.slim
@@ -26,7 +26,7 @@ priority: "1.0"
               .callout.drop
                 p.lead.text-center.relative Standard
                 p.lead.text-center <strong>$999</strong>
-                p.small.text-center per environment/month
+                p.small.text-center per <span class="has-tip top revert-has-tip" data-tooltip aria-haspopup="true" data-disable-hover="false" title="An environment is your application + Datica services like Logging, Monitoring, Vulnerability Scanning, and more.">environment</span>/month
                 ul.no-style
                   li <strong>Compliance</strong>
                   li <i class="fa fa-check"></i> Business Associate Agreement
@@ -47,15 +47,15 @@ priority: "1.0"
                   li <i class="fa fa-check"></i> 99.5% SLA
                   li <i class="fa fa-check"></i> 9-5 ticket support
                 hr/
-                = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button hollow full-width", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
+                = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo", :button_classes => "button full-width", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
 
             .columns.small-12.medium-4
               .callout.drop
                 p.lead.text-center.relative <span class="pill-best">best</span> Professional
                 p.lead.text-center <strong>$3,299</strong>
-                p.small.text-center per environment/month
+                p.small.text-center per <span class="has-tip top revert-has-tip" data-tooltip aria-haspopup="true" data-disable-hover="false" title="An environment is your application + Datica services like Logging, Monitoring, Vulnerability Scanning, and more.">environment</span>/month
                 ul.no-style
-                  li <strong>Infrastructure Options:</strong>
+                  li <span class="has-tip top revert-has-tip" data-tooltip aria-haspopup="true" data-disable-hover="false" title="All service levels and options are per environment — meaning, you get 4 development environments for each production environment you purchase."><strong>Infrastructure Options:</strong></span>
                   li <i class="fa fa-check"></i> Windows Availability
                   li <i class="fa fa-check"></i> <strong><span class="has-tip top revert-has-tip" data-tooltip aria-haspopup="true" data-disable-hover="false" title="Development environments have no base fee — meaning you pay just for the infrastructure cost.">4 Additional Development Environments</span></strong>
                 hr/
@@ -105,25 +105,30 @@ priority: "1.0"
             .columns.small-12.medium-12
               .callout.drop
                 .row.align-center.row--skinny
-                  .columns.small-12.medium-4
+                  .columns.small-12.medium-3
                     p.lead <strong>RAM</strong>
                     p RAM is often the most costly infrastructure component. On Datica, scaling RAM is predictable and affordable.
                     ul.border-ul.custom-pass-through-list
                       li <strong>Pass-through on:</strong> AWS EC2 Instances
                       li <strong>Unit cost:</strong> $13.39/GB/month
-                  .columns.small-12.medium-4
+                  .columns.small-12.medium-3
                     p.lead <strong>Disk</strong>
                     p Datica takes advantage of AWS's EBS volumes for disk space. Your directly benefit from this low cost solution.
                     ul.border-ul.custom-pass-through-list
                       li <strong>Pass-through on:</strong> AWS EBS Volumes
                       li <strong>Unit cost:</strong> $0.12/GB/month
-                  .columns.small-12.medium-4
+                  .columns.small-12.medium-3
                     p.lead <strong>Block Storage</strong>
-                    p HIPAA compliant S3 buckets on Datica are often times even cheaper than buying non-compliant buckets directly from AWS.
+                    p Compliant S3 buckets on Datica are often times even cheaper than buying non-compliant buckets directly from AWS.
                     ul.border-ul.custom-pass-through-list
                       li <strong>Pass-through on:</strong> AWS S3
                       li <strong>Unit cost:</strong> $0.024/GB/month
-
+                  .columns.small-12.medium-3
+                    p.lead <strong>VPN</strong>
+                    p VPNs are often required to access sensitive information like PHI. Datica provides VPNs for all customers on all tiers.
+                    ul.border-ul.custom-pass-through-list
+                      li <strong>Pass-through on:</strong> VPN Pair
+                      li <strong>Unit cost:</strong> $90.00/month
 
 = partial("/partials/section-promos/tco-guide-ribbon", :locals => { :style => "dark", :align => "right", :bgImage => "https://images.contentful.com/189dvqdsjh46/52vT3DpQCcEQMUoiimSmCu/5de61de8155dd3f598394613939ee4b9/eggs_in_basket__tinted__-_autumn-mott-21276.jpg" })
 section#faq-pricing.section-article
