--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -89,7 +89,7 @@ section.section-article.container-gray-12
   .row.align-center.group
     .columns.small-12.large-12
       img.img-crisp alt="platform-controls-diagram" data-interchange="[https://images.contentful.com/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png?w=640, small], [https://images.contentful.com/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png, medium]"
-      hr.divider/
+
 section.section-article
   .row.group.align-center
     .columns.small-12.text-center
@@ -99,7 +99,7 @@ section.section-article
       p.lead Good practices for Life Sciences on the Cloud
   .row.align-center
     .columns.small-12.medium-6.large-4.medium-order-2
-      img.group alt=("GDPR Ready") src="https://images.contentful.com/189dvqdsjh46/6L09pVF6a4uAY00QMqSOYg/a99648672cbc3279925bf2fa7e146fd6/gdpr-ready-badge-text.png" /
+      img.group.logo-size--xlarge alt=("GDPR Ready") src="https://images.contentful.com/189dvqdsjh46/6L09pVF6a4uAY00QMqSOYg/a99648672cbc3279925bf2fa7e146fd6/gdpr-ready-badge-text.png" /
     .columns.small-12.medium-6.large-6
       markdown:
         The European Union has created a new authoritative regulation on consumer data called GDPR. Fines start being handed out on May 25th, 2018. The regulation applies to all EU citizens regardless of service or where the data lives. Protected Health Information (PHI) is scoped within GDPR, so any healthcare organization who might service European Union citizens will be affected by it.
@@ -121,7 +121,7 @@ section.section-article
 
         [Learn more about GxP](/academy/gxp-and-business-associates-does-it-exist-like-hipaa).
     .columns.small-12.medium-6.large-4
-      img.group alt=("GxP Ready") src="https://images.contentful.com/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png" /
+      img.group.logo-size--xlarge alt=("GxP Ready") src="https://images.contentful.com/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png" /
 
 .container-color--gray-light
   section.section-article
@@ -148,11 +148,7 @@ section.section-article
           p In 2014 Datica open sourced our company policies under a a CC BY-SA 4.0 license. Since then the response has been overwhelmingly positive—we have had more activity on GitHub than governmental institutions like the FDA. Along the way we’ve helped hundreds of businesses get started by eliminating this portion of HIPAA compliance as a burden.
           p Our policies have been written with modern, cloud-based technology vendors in mind. We looked far and wide for policy examples that fit our company, and couldn’t find any. So we wrote our own. Importantly, these policies have been through multiple external audits—two HIPAA audits and one HITRUST audit.
           p Do you handle PHI and not yet have your own company policies in place? Then you’ll find our content useful.
-          p
-            a.button.hollow href="/open-source/policies"
-              | Policies Overview
-              i.fa.fa-icon.fa-angle-right
-
+          = partial "partials/snippets/button", :locals => { :label => "Policies Overview", :url => "/open-source/policies", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue" }
 
 aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]"
   .row.align-center
