--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -53,42 +53,40 @@ block_benefits:
 - current_page.data.share_image = image_share_platform
 - the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
 
-section.section-article.container-color--gray-light
+section#intro.section-article.container-gray-12
   .row.align-center
     .columns.small-12.medium-10.large-6.text-center
       h1.headline-3 The cloud enablement layer for <br><strong>all healthcare</strong> applications
       p The Datica platform makes hosting compliant healthcare applications and data integration tooling as simple as <code>git-push</code>.
-      hr/
-  .row.align-center
+  .row.align-center.group--2x
     .columns.small-12.large-4
       p The Datica platform enables you to focus on building and securing your app by managing all compliance and security obligations on the cloud.
       p This is what <strong>complete HIPAA compliance in the cloud</strong> looks like.
     .columns.small-12.large-8
-      img.img-crisp.lozad alt="Compliance Overview diagram" data-src="https://images.ctfassets.net/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/9b634cd5b8a778dc4fc7ae51d6a11239/platform-overview-diagram-2x.png" /
+      img.img-crisp.lozad.group alt="Compliance Overview diagram" data-src="https://images.ctfassets.net/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/9b634cd5b8a778dc4fc7ae51d6a11239/platform-overview-diagram-2x.png" /
 
-section#building.section-article
-  .row.align-center
-    .columns.small-12.text-center.group
+  #building.row.align-center
+    .columns.small-12.text-center
       h2.headline-4.nomargin Building On The Platform
       p.lead See how developers use the Datica platform to build compliant applications
   .row.section-platform--technology-build
     .columns.small-12.medium-4.align-center
-      img.group.lozad alt="Build" data-src="https://images.ctfassets.net/189dvqdsjh46/6p4qvRe42kM8mcAyGqiIwE/f713310dfcf586ba5251e15f958f92f8/build_flow_step_1.png?w=400" /
+      img.lozad.pad alt="Build" data-src="https://images.ctfassets.net/189dvqdsjh46/6p4qvRe42kM8mcAyGqiIwE/f713310dfcf586ba5251e15f958f92f8/build_flow_step_1.png?w=400" /
     .columns.small-12.medium-4.align-center
-      img.group.lozad alt="Push" data-src="https://images.ctfassets.net/189dvqdsjh46/3Ijl0wpXiEmAk6iGwYA6gW/f1b6a04e20e3d5d9477473dd0d7114e2/build_flow_step_2.png?w=400" /
+      img.lozad.pad alt="Push" data-src="https://images.ctfassets.net/189dvqdsjh46/3Ijl0wpXiEmAk6iGwYA6gW/f1b6a04e20e3d5d9477473dd0d7114e2/build_flow_step_2.png?w=400" /
     .columns.small-12.medium-4.align-center
-      img.group.lozad alt="Compliance" data-src="https://images.ctfassets.net/189dvqdsjh46/3McfWoQ9Vmm4iciuu4oYe4/64ef01a47e5a89d1b31c45b8942bb076/build_flow_step_3.png?w=400" /
+      img.lozad.pad alt="Compliance" data-src="https://images.ctfassets.net/189dvqdsjh46/3McfWoQ9Vmm4iciuu4oYe4/64ef01a47e5a89d1b31c45b8942bb076/build_flow_step_3.png?w=400" /
   .row.section-platform--technology-build
     .columns.small-12.medium-4.align-center
-      h4.headline-4 Build
+      h4.headline-4.text-center Build
       p.lead Do what you do best. Build your product.
       p You’re building a product for healthcare. Be it for bettering patient outcomes through analytics or creating the next great telemedicine application.
     .columns.small-12.medium-4.align-center
-      h4.headline-4 Push
+      h4.headline-4.text-center Push
       p.lead Git based deployments via the Datica CLI.
       p You’re ready to get your application live. Whether you’re launching your first application or making a routine product release. Being HIPAA compliant is as easy as “git push”.
     .columns.small-12.medium-4.align-center
-      h4.headline-4 Compliance
+      h4.headline-4.text-center Compliance
       p.lead Your app is now compliant on Datica.
       p Once you’re application is live on Datica you’ll enjoy a suite of tools and products to manage your application’s environment. From intrusion detection to backups and much much more.
 
@@ -124,23 +122,26 @@ section#tech.section-article
             h4.headline-5 = block.title
             p = block.body
             img.lozad data-src = block.image
+  #capabilities
+    .row.align-center
+      .columns.small-12.large-8
+        h3.heading-3.text-center.group Powerful capabilities and features under the hood
+      .row.align-center
+        .columns.small-6.large-5
+          ul.list-check.text-larger
+            li Quickly deploy IPSEC or TLS VPNs in minutes
+            li Nightly backups
+            li Proactive security patching. <em>Remember WannaCry? We were patched 1 month prior to it hitting.</em>
+            li Automation of network overlays across Docker containers
+        .columns.small-6.large-5
+          ul.list-check.text-larger
+            li Let’s Encrypt
+            li Self-service scaling of internal application and database services
+            li Proactive health checks
+            li Hot database swaps
+            li Enhanced service scheduling with zones
 
-section#capabilities.section-article.container-color--dark-alt
-  .row.align-center
-    .columns.small-12.medium-8.large-6
-      h2.heading-3.text-center.group Powerful capabilities and features under the hood
-      ul.list-check.text-larger
-        li Quickly deploy IPSEC or TLS VPNs in minutes
-        li Nightly backups
-        li Proactive security patching. <em>Remember WannaCry? We were patched 1 month prior to it hitting.</em>
-        li Automation of network overlays across Docker containers
-        li Let’s Encrypt
-        li Self-service scaling of internal application and database services
-        li Proactive health checks
-        li Hot database swaps
-        li Enhanced service scheduling with zones
-
-section#ui.section-article.container-gray-12
+section#ui.section-article.container-gray-11
   .row.align-center
     .columns.small-12.large-8
       p.lead
@@ -159,57 +160,7 @@ section#ui.section-article.container-gray-12
       h4.headline-5 Command Line Interface
       p The Datica CLI gives engineers access to the control they need within the tools they are used to.
 
-section.section-article.container-gray-12
-  - case_studies = data.site.collections.to_a.select { | id, cust | (id == "3HG3kERl1YaGiSoSiO6wEI") }
-  - case_studies.each do | id, cardgroup |
-    .row.align-center
-      .columns.small-12.text-center.group
-        h2.headline-3 = cardgroup.title
-    .row.full-width.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
-      - cardgroup["related_entries"].each do | card |
-        - carditem = data.site.caseStudy[card.id]
-        - cust = data.site.customers[carditem.customer.id]
-        .column
-          = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cust } 
-/ section.section-article.container-image--fixed.container-color--blue-bright-noise
-  .row.align-center
-    .columns.small-12.medium-10.large-8.text-center
-      h2.headline-4.nomargin Platform use cases
-      p.lead How developers use the Datica platform
-  .row.align-center
-    .small-12.large-11
-      .row.align-justify.align-middle.platform-bg-bridge data-interchange="[/public/img/bg/datica-bridge-w.png, medium]" 
-        .columns.small-12.medium-5.large-5.text-center
-          .card.drop
-            .card-section
-              h3.headline-4 Your App
-              p
-                | Host your digital health application just like you would on any other cloud provider, except being fully HIPAA compliant. Deployment is as simple as a <code>git-push</code>.
-            .card-divider.card-divider--flush
-              a href: "/platform/technology", title: "View tech support and features" 
-                | View tech support and features
-                i.fa.fa-icon.fa-angle-right
-        .columns.small-12.medium-5.large-5.text-center
-          .card.drop
-            .card-section
-              h3.headline-4 Data Integration
-              p Instantly spin up the complete cloud toolset to conduct compliant, scalable data exchange with EHRs or other systems.
-            .card-divider.card-divider--flush
-              a href: "/platform/integration", title: "Learn more about integration capabilities" 
-                | Learn more about integration capabilities
-                i.fa.fa-icon.fa-angle-right
-/section.section-article
-  #companies.row.align-center
-    .columns.small-12.large-12.text-center
-      h3.headline-3 World-class companies trust Datica
-      .logo-cloud.group
-        - data.views.home.customers.each do |logo|
-          img alt="#{logo["name"]}" class="lozad logo-cloud--item logo-size--#{logo['logoSize']}" data-src="/public/img/customer-logos/sm/#{logo["file"]}.png" /
-      a.button.hollow href="/platform/success" title="Customer Success Stories" 
-        | View Customer Success Stories
-        i.fa.fa-icon.fa-angle-right
-
-section.section-article.container-color--gray-dark-grad-mono-noise
+section#benefits.section-article.container-color--gray-dark-grad-mono-noise
   .row.align-center
     .columns.small-12.large-8.text-center
       h3.headline-3 Compliance ownership is a liability, not an asset. Don't shoulder that risk by yourself.
@@ -225,6 +176,30 @@ section.section-article.container-color--gray-dark-grad-mono-noise
         h4.headline-5 = item.title
       .columns.small-12.medium-4.text--blue-glow = item.feature
       .columns.small-12.medium-5.text--green-glow = item.benefit
+
+section#customers.section-article.container-gray-12
+  - case_studies = data.site.collections.to_a.select { | id, cust | (id == "3HG3kERl1YaGiSoSiO6wEI") }
+  - case_studies.each do | id, cardgroup |
+    .row.align-center
+      .columns.small-12.text-center.group
+        h2.headline-3 = cardgroup.title
+    .row.full-width.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
+      - cardgroup["related_entries"].each do | card |
+        - carditem = data.site.caseStudy[card.id]
+        - cust = data.site.customers[carditem.customer.id]
+        .column
+          = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cust } 
+
+aside#ctaBottom.container-color--dark-grad-blue
+  .section-article.container-image--center.lozad data-background-image="/public/img/art/platform-iso-illustration-bg.svg"
+    .row.align-center
+      .columns.small-12.medium-10.large-10.text-center
+        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
+    .row.align-center
+      .columns.small-6.large-4.text-right
+        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
+      .columns.small-6.large-6.text-left
+       = partial "partials/snippets/button", :locals => { :label => "Learn About Datica CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "cks" }
 
 /section.section-article.container-color--gray-dark-grad-mono-noise
   .row.align-center
@@ -306,3 +281,41 @@ section.section-article.container-color--gray-dark-grad-mono-noise
         | with a
         strong Healthcare Competency
         | focus.
+/ section.section-article.container-image--fixed.container-color--blue-bright-noise
+  .row.align-center
+    .columns.small-12.medium-10.large-8.text-center
+      h2.headline-4.nomargin Platform use cases
+      p.lead How developers use the Datica platform
+  .row.align-center
+    .small-12.large-11
+      .row.align-justify.align-middle.platform-bg-bridge data-interchange="[/public/img/bg/datica-bridge-w.png, medium]" 
+        .columns.small-12.medium-5.large-5.text-center
+          .card.drop
+            .card-section
+              h3.headline-4 Your App
+              p
+                | Host your digital health application just like you would on any other cloud provider, except being fully HIPAA compliant. Deployment is as simple as a <code>git-push</code>.
+            .card-divider.card-divider--flush
+              a href: "/platform/technology", title: "View tech support and features" 
+                | View tech support and features
+                i.fa.fa-icon.fa-angle-right
+        .columns.small-12.medium-5.large-5.text-center
+          .card.drop
+            .card-section
+              h3.headline-4 Data Integration
+              p Instantly spin up the complete cloud toolset to conduct compliant, scalable data exchange with EHRs or other systems.
+            .card-divider.card-divider--flush
+              a href: "/platform/integration", title: "Learn more about integration capabilities" 
+                | Learn more about integration capabilities
+                i.fa.fa-icon.fa-angle-right
+/section.section-article
+  #companies.row.align-center
+    .columns.small-12.large-12.text-center
+      h3.headline-3 World-class companies trust Datica
+      .logo-cloud.group
+        - data.views.home.customers.each do |logo|
+          img alt="#{logo["name"]}" class="lozad logo-cloud--item logo-size--#{logo['logoSize']}" data-src="/public/img/customer-logos/sm/#{logo["file"]}.png" /
+      a.button.hollow href="/platform/success" title="Customer Success Stories" 
+        | View Customer Success Stories
+        i.fa.fa-icon.fa-angle-right
+
