--- a/source/partials/snippets/_alert-ribbon.slim
+++ b/source/partials/snippets/_alert-ribbon.slim
@@ -1,19 +1,39 @@
+ruby:
+  today = DateTime.now.utc
+  sorted_webinars = data.site.webinars.to_a.sort_by{ |id, webinars| webinars['event_date'] }.reverse!
+
+- sorted_webinars.take(1).each do | id, webinar_entry |
+  ruby:
+    event_title = webinar_entry.title
+    event_date_full = webinar_entry["event_date"].to_s.in_time_zone("Central Time (US & Canada)").strftime('%A, %B %-d, %Y, %l:%M %p %Z')
+    event_date_slug = webinar_entry["event_date"].to_s.in_time_zone("Central Time (US & Canada)").strftime('%Y-%m-%d')
+    if webinar_entry.has_key("image_thumb")
+      event_img = webinar_entry.image_thumb.url
+    else
+      event_img = 'https://images.ctfassets.net/189dvqdsjh46/6lqIxPcZY4yuAMaEA4GwE4/3599f800a33d3aaa8876ab7d0c6b1ec7/webinar-bg-default.png'
+    end
+    event_url = '/webinars/' + webinar_entry.slug
+    cookie_name = webinar_entry.event_date.strftime('%B %-d, %Y')
+
+  - if webinar_entry.has_key?("event_date")
+    - if today.strftime("%F") <= webinar_entry['event_date'].strftime("%F")
+      aside id="alertTop" style="background-color: #373D50; height: 3rem;" class=" dismiss full-width alert-ribbon text-center" data-closable=""
+        a.dismiss.relative(href=event_url title=event_title)
+          img.lozad.absolute.img-cover src="#{event_img}?fit=thumb&w=600&h=16&fm=jpg&q=5" data-src="#{event_img}?fit=thumb&w=1200&h=48" style="top: 0; left: 0;" alt=event_title /
+        .row.align-center
+          .column
+            a.link--white(href=event_url)
+              | #{event_title}
+
+        button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
+          span aria-hidden="true" &times;
+
 / aside.row.collapse.align-center.hide.full-width.container-gray-1.alert-ribbon.text-center id="alertTop" class="" data-closable=""
 /   .column.small-10.medium-8
-/     a.link--white(href="/learn-more/azure" title="Learn more about Kubernetes<sup>&reg;</sup> on Azure")
-/       span.text-light Hear about Datica at <strong>Microsoft Build 2018?</strong> Learn more.
+/   a.link--white(href="/learn-more/azure" title="Learn more about Kubernetes<sup>&reg;</sup> on Azure")
+/     span.text-light Hear about Datica at <strong>Microsoft Build 2018?</strong> Learn more.
 /   .column.small-2.medium-4.container-image-fill(style="background-image: url('https://images.ctfassets.net/189dvqdsjh46/1X6QRrY9gYumsoIIsM6QSO/3563e2855131830d7a0622747044a934/build-18-bg-bright.svg');")
-/     button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
-/       span aria-hidden="true" &times;
+/   button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
+/     span aria-hidden="true" &times;
 
 / src="#{event_img}?h=48&fm=png&fl=png8"
-- event_title = 'Webinar: What Really is Compliance? - Sept. 26, 1pm - Register today!'
-- event_img = 'https://images.ctfassets.net/189dvqdsjh46/7cYrQDOpgcCksAUKIsQaSY/16c232603bc61794d7a408bc4223a159/webinar-c3-promo-ribbon-desktop.png'
-- event_url = '/webinars/what-really-is-compliance/'
-
-/aside id="alertTop" style="background-color: #373D50; height: 3rem;" class="hide dismiss full-width alert-ribbon text-center" data-closable=""
-  a.dismiss(href=event_url title=event_title)
-    img.lozad data-src="#{event_img}" alt=event_title /
-  .row.align-center
-    button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
-      span aria-hidden="true" &times;
